# gimp-texturize

./: .gitignore  AUTHORS  LOG  Makefile.am  Makefile.in  README  README.md  about.html  aclocal.m4  autogen.sh  base.html  clean  compile  config.h  config.h.in  configure  configure.in  contact.html  download.html  examples.html  extra_config.h  howto.html  index.html  install.html  meson.build  problems.html  texturize.css  todo
.github/workflows/: build.yml
CVS/: Entries
CVSROOT/: modules
CVSROOT/CVS/: Entries
Progs/: Source_code_PDF_version_1.0.tgz  texturize_gimp_plugin_version_1.0.tgz
autom4te.cache/: output.0  traces.0
debian/: changelog  control  copyright  dirs  docs  rules  watch
debian/CVS/: Entries
help/: Makefile.in
help/CVS/: Entries
help/en/: Makefile.in  index.html
help/en/CVS/: Entries  Repository
help/images/: Makefile.in
help/images/CVS/: Entries  Repository  Root
po/: LINGUAS  az.po  de.po  fr.po  sk.po  sv.po  zh_TW.po
po/CVS/: Entries
scripts/: clean  compile
src/: Makefile.am  Makefile.in  block.h  compter.c  compter.h  counting.c  counting.h  graph.cpp  graph.h  graphcut.cpp  initialiser.c  initialize.c  interface.c  interface.h  main.c  main.h  maxflow.cpp  offset.c  render.c  render.h  render_minimal.c  texturize.h
src/CVS/: Entries
src/adjacency_list/CVS/: Entries  Repository
src/archaeology/: main.c  render.c
src/forward_star/CVS/: Entries  Repository
